--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,18 @@
         <item>Dental Examination</item>
         <item>Immediate Health Care</item>
     </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
+
+
+        <string-array name="consultationType">
+            <item>Dental Examination</item>
+            <item>Annual Physical</item>
+        </string-array>
+
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="role_array">
+        <item>nurse</item>
+        <item>student</item>
+    </string-array>
 </resources>
